[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/gui/level_complete/level_complete.gd" type="Script" id=1]
[ext_resource path="res://textures/buttons/next.svg" type="Texture" id=2]
[ext_resource path="res://textures/buttons/exit.svg" type="Texture" id=3]
[ext_resource path="res://textures/buttons/mask.png" type="BitMap" id=4]
[ext_resource path="res://textures/buttons/restart.svg" type="Texture" id=5]
[ext_resource path="res://textures/hud/clock.svg" type="Texture" id=6]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://textures/buttons/button_focus.svg" type="Texture" id=8]
[ext_resource path="res://resources/themes/font_medium.tres" type="Theme" id=9]
[ext_resource path="res://addons/utils/button_highlighter.gd" type="Script" id=10]
[ext_resource path="res://textures/icons/diamond.svg" type="Texture" id=11]
[ext_resource path="res://addons/simple-gui-transitions/transition.gd" type="Script" id=12]
[ext_resource path="res://textures/hud/strawberry.svg" type="Texture" id=13]
[ext_resource path="res://textures/hud/death.svg" type="Texture" id=14]
[ext_resource path="res://resources/themes/font_small.tres" type="Theme" id=15]

[node name="LevelComplete" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )

[node name="GuiTransition" type="Node" parent="."]
script = ExtResource( 12 )
layout = NodePath("..")
controls = [ NodePath("../MarginContainer/VBoxContainer/LabelTitle"), NodePath("../MarginContainer/VBoxContainer/LabelPercent"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ContainerTime"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ContainerMedal"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ContainerCollected"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonNext"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ContainerDeaths/TextureRectDeaths"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ContainerDeaths/LabelDeaths") ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource( 9 )
text = "Level Complete!"
align = 1
valign = 1

[node name="LabelPercent" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1240.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource( 15 )
text = "Level Name (100%)"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1240.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 9 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 183.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerCollected" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 187.0
margin_right = 370.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectCollected" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerCollected"]
margin_right = 183.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="LabelCollected" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerCollected"]
margin_top = 284.0
margin_right = 183.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.2
text = "0/0"
align = 1

[node name="Control5" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 374.0
margin_right = 410.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ContainerMedal" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 597.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectTrophy" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerMedal"]
margin_right = 183.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="LabelTrophy" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerMedal"]
margin_top = 284.0
margin_right = 183.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.2
text = "Diamond"
align = 1

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 601.0
margin_right = 638.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ContainerTime" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 825.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectTime" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerTime"]
margin_right = 183.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="LabelTime" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerTime"]
margin_top = 284.0
margin_right = 183.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.2
text = "99/99s"
align = 1

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 829.0
margin_right = 865.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ContainerDeaths" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 869.0
margin_right = 1052.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectDeaths" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerDeaths"]
margin_right = 183.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="LabelDeaths" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContainerDeaths"]
margin_top = 284.0
margin_right = 183.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.2
text = "x0"
align = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1056.0
margin_right = 1240.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control5" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 454.0
margin_right = 1240.0
margin_bottom = 471.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 475.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="ButtonQuit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 244.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 8 )
texture_click_mask = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit"]
script = ExtResource( 10 )

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 248.0
margin_right = 493.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonRestart" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 497.0
margin_right = 742.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 8 )
texture_click_mask = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart"]
script = ExtResource( 10 )

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 746.0
margin_right = 991.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonNext" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 995.0
margin_right = 1240.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 8 )
texture_click_mask = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonNext"]
script = ExtResource( 10 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonNext" to="." method="_on_ButtonNext_pressed"]
